fix: commented overflow-x: hidden in globals css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
